crates/quiver/tests/compile_fail/unsupported_type.rs
//! A column field must be an Arrow array type.

#[derive(quiver::Quiver)]
struct Thing {
    name: String,
}

fn main() {}
